--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>About Me</h2>
     <p><strong>Qualification:</strong> DECE & BE ECE</p>
     <p><strong>Experience:</strong> 6 months as Graphic Designer at Ascender Services</p>
-    <p><strong>Field of Interest:</strong> Graphic Design, Photography, ideograph, Video Editing</p>
+    <p><strong>Field of Interest:</strong> Graphic Design, Photography, videograph, Video Editing</p>
     <p><strong>Software Known:</strong> Adobe Premiere Pro, Photoshop, After Effects, Blender (Basic)</p>
     <p>I am a passionate graphic designer with a keen eye for creativity and visual storytelling. My goal is to craft designs that not only look good but also communicate effectively. With hands-on experience in digital marketing, I understand the balance between aesthetics and branding. From logos and posters to social media creatives and promotional videos, I enjoy every step of the design journey.</p>
   </section>
